$Id: History,v 1.1 1999-01-07 16:09:20 gunter Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Dec 03, 98 J.Allison (tag intercoms-00-04-04)
- Protected G4UImanager::SetCoutDestination with #ifdef G4STREAM.

Dec 02, 98 M.Asai (tag intercoms-00-04-03)
- G4UnitsMessenger is constructed/destructed by G4UImanager.

Nov 27, 98 M.Asai (tag intercoms-00-04-02)
- G4UnitsMessenger has been inported from global/management to avoid a loop dependency.

Nov 25, 98 J.Allison (tag intercoms-00-04-01)
- Allowed quotation-mark-enclosed blank-embedded parameters in GetCurrentValue.
- "Cosmetic" change to G4UIparameter (M.Asai).

Nov 05, 98 M.Asai (tag intercoms-00-03-07)
- Move G4strstreambuf.hh to global category to avoid a loop dependency (M.Nagamatsu)
  affected files are G4UImanager.hh G4UImanager.cc, G4UIsession.hh.

Oct 26, 98 M.Asai (tag intercoms-00-03-06)
- Add SetCoutDestination(NULL) to the constructor and destructor of G4UImanager.

Oct 20, 98 M.Asai (tag intercoms-00-03-05)
- Change static methods in G4UIcommand which are for unit conversion from protected
  to public.

Oct 13, 98 M.Asai (tag intercoms-00-03-04)
- Interoducing a concrete implementation of G4cout/G4cerr (M.Nagamatsu).